--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "bluebird": "3.5.5",
     "eventemitter2": "^2.1.3",
     "webrtc-adapter": "~1.1.0",
-    "webrtcsupport": "^2.2.0",
-    "websocket": "^1.0.22"
+    "websocket": "^1.0.34",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
@@ -33,18 +33,18 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^3.0.2",
     "istanbul": "^0.4.2",
-    "jquery": "^3.0.0",
+    "jquery": "^3.6.0",
     "karma": "^4.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-mocha": "^1.1.1",
     "karma-read-json": "^1.1.0",
     "mocha": "^6.2.0",
-    "resolve": "^1.1.7",
+    "resolve": "^1.20.0",
     "sinon": "^1.17.3",
-    "underscore": "^1.8.3",
+    "underscore": "^1.13.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "ws": "^7.2.0"
+    "ws": "^7.4.4"
   }
 }
